--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,24 +6,21 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: MozillaTN Club Name
-
+title: vMozilla
 #What is the name of the events or talks you would like to host? (Example Brownbags, Talks, Lighting Talks)
 event_label: Events
 
-description: > # this means to ignore newlines until "baseurl:"
-  MozillaTN ClubName is club under MozillaTN community actively contributing to various contribution of mozilla.
+description: vMozilla is club under MozillaTN community actively contributing to various contribution of mozilla.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://mozillatn.github.io/clubs
+url: https://mozillatn.github.io/VIT 
 
 domain_name: 'http://mozillatn.github.io'
 
 #These settings might be able to go?
-author: MozillaTN
-twitter_username: MozillaTN
-github_username:  MozillaTN
-
+author: itsN1X
+twitter_username: vMozilla
+github_username:  vMozilla 
 # Build settings
 markdown: kramdown
 
