--- a/docs/_data/past_contributors.yml
+++ b/docs/_data/past_contributors.yml
@@ -1,25 +1,6 @@
 
--   name: Viswaprasth
-    twitter: iamvp7
-    description : WebExtensions Contributor
-    photo: "http://www.gravatar.com/avatar/41c39033134359ca0171685f5171d298"
-    contribution: QA 
-
--   name: Mohammed Ammar
-    twitter: ksmammar
-    description : Localization Contributor, TBTW Local Coach
-    photo: "http://www.gravatar.com/avatar/d2b609a7afc027909498217706088af7?s=80"
-    Contribution: L10N
-
--   name: Karthickeyan N
-    twitter: hellokarthic
-    description : Campus Club Advisory Committee Board member, AMO Featured Board Member, WebVR Contributor
-    photo: "https://secure.gravatar.com/avatar/1eb16f71a1cfb1591516edbcf1df5dfc"
-    Contribution: WebVR
-
--   name: Khaleel Jageer
-    twitter: JSKaleel
-    description : Localization Contributor
-    photo: "http://s.gravatar.com/avatar/987a838f909beade7698055957ee1989?s=80"
-    Contribution: L10N
-
+-   name: Nikhil Pandita
+    twitter: itsN1X
+    description: Student Rep
+    photo: "http://s.gravatar.com/avatar/d308351f4d397bc2ada19f116c71e499?s=80"
+    contribution: The Tor Project
