--- a/docs/_data/organisers.yml
+++ b/docs/_data/organisers.yml
@@ -26,4 +26,12 @@ Nagaraj V:
     description: Contributor
     photo: "https://s.gravatar.com/avatar/ec27e7511d4c42e401787c483faeba7a"
     contribution: WebCompat
-
+ 
+Nikhil Pandita 
+    
+    name: Nikhil Pandita
+    twitter: itsN1X
+    description: Club Lead
+    photo: "http://s.gravatar.com/avatar/d308351f4d397bc2ada19f116c71e499?s=80"
+    contribution: at VIT - vMozilla : Vellore Chapter
+    
