--- a/docs/_data/organisers.yml
+++ b/docs/_data/organisers.yml
@@ -27,8 +27,7 @@ Nagaraj V:
     photo: "https://s.gravatar.com/avatar/ec27e7511d4c42e401787c483faeba7a"
     contribution: WebCompat
  
-Nikhil Pandita 
-    
+Nikhil Pandita: 
     name: Nikhil Pandita
     twitter: itsN1X
     description: Club Lead
