--- a/docs/_data/organisers.yml
+++ b/docs/_data/organisers.yml
@@ -32,5 +32,4 @@ Nikhil Pandita: 
     twitter: itsN1X
     description: Club Lead
     photo: "http://s.gravatar.com/avatar/d308351f4d397bc2ada19f116c71e499?s=80"
-    contribution: at VIT - vMozilla : Vellore Chapter
-    
+    contribution: CC - vMozilla, Vellore Chapter
