--- a/docs/_data/present_contributors.yml
+++ b/docs/_data/present_contributors.yml
@@ -1,7 +1,5 @@
-
 -   name: Nikhil Pandita
     twitter: itsN1X
     description: Regional Coordinator
     photo: "http://s.gravatar.com/avatar/d308351f4d397bc2ada19f116c71e499?s=80"
-    contribution: Campus Clubs at VIT - vMozilla : Vellore Chapter
-    
+    contribution: Campus Clubs - vMozilla, Vellore Chapter
