--- a/docs/_data/organisers.yml
+++ b/docs/_data/organisers.yml
@@ -31,5 +31,5 @@ Nikhil Pandita: 
     name: Nikhil Pandita
     twitter: itsN1X
     description: Club Lead
-    photo: "http://s.gravatar.com/avatar/d308351f4d397bc2ada19f116c71e499?s=80"
-    contribution: CC - vMozilla, Vellore Chapter
+    photo: "https://secure.gravatar.com/avatar/ab74b22d8c7e9fad6fb52e0f1cbd65c9"
+    contribution: CC, vMozilla, Vellore Chapter
