--- a/docs/_data/organisers.yml
+++ b/docs/_data/organisers.yml
@@ -27,6 +27,27 @@ Nagaraj V:
     photo: "https://s.gravatar.com/avatar/ec27e7511d4c42e401787c483faeba7a"
     contribution: WebCompat
  
+Nagaraj V:
+    name: Nagaraj V
+    twitter: nagarajnaidu921
+    description: Contributor
+    photo: "https://s.gravatar.com/avatar/ec27e7511d4c42e401787c483faeba7a"
+    contribution: WebCompat
+ 
+Nikhil Pandita:
+    name: Naaj V
+    twitter: nagnaidu921
+    description: Contributor
+    photo: "https://s.gravatar.com/avatar/ec27e7511d4c42e401787c483faeba7a"
+    contribution: WebCompat
+ 
+Nagaraj V:
+    name: Nagaraj V
+    twitter: nagarajnaidu921
+    description: Contributor
+    photo: "https://s.gravatar.com/avatar/ec27e7511d4c42e401787c483faeba7a"
+    contribution: WebCompat
+ 
 Nikhil Pandita: 
     name: Nikhil Pandita
     twitter: itsN1X
